--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,10 +9,14 @@
   margin: 0 auto;
 }
 
-.container p {
-  color: red;
-}
-
 .main {
   padding: 30px 0;
+}
+
+li {
+  list-style: none;
+}
+
+.menu {
+  float: right;
 }
